# OOC_projects

./: .gitignore
module1/: CMakeLists.txt  Triangle_test.cpp
module10/: CMakeLists.txt  Elevator.csv  assignment.md  design.md
module10/src/: Building.cpp  Building.h  Elevator.cpp  Elevator.h  Floor.cpp  Floor.h  Logger.h  Passenger.cpp  Passenger.h  Simulation.cpp  Simulation.h  main.cpp
module12/: CMakeLists.txt  assignment.md  design.md  tree.txt
module12/inc/: card.hpp  card_textures.hpp  computer_player.hpp  deck.hpp  game.hpp  gui_app.hpp  gui_player.hpp  gui_state.hpp  handrank.hpp  human_player.hpp  player.hpp  pokerhand.hpp
module12/src/: card_textures.cpp  computer_player.cpp  deck.cpp  game.cpp  gui_app.cpp  gui_player.cpp  human_player.cpp  main.cpp  player.cpp  pokerhand.cpp
module14/: CMakeLists.txt  assigment.md  design.md  matrix_add.h  threaded.cpp  unthreaded.cpp
module2/: Statistical_analysis.cpp
module3/: CMakeLists.txt  compile_commands.json  tree.txt
module3/inc/: board.hpp  computer_player.hpp  human_player.hpp  test_suite.hpp
module3/src/: board.cpp  computer_player.cpp  human_player.cpp  main.cpp  test_suite.cpp
module4/: CMakeLists.txt  DESIGN.md  compile_commands.json
module4/inc/: card.hpp  handrank.hpp  pokerhand.hpp
module4/src/: main.cpp  pokerhand.cpp
module5/: CMakeLists.txt  Design.md
module5/inc/: Probability.hh
module5/src/: Probability.cc  main.cc
module8/: CMakeLists.txt  assignment.md  design.md
module8/inc/: Add.hpp  BinaryOp.hpp  Constant.hpp  Div.hpp  Mul.hpp  Node.hpp  Sub.hpp  UnaryMinus.hpp  Variable.hpp
module8/src/: main.cpp
module8/tests/: test_expression_tree.cpp
